[gd_scene load_steps=3 format=3 uid="uid://chbmbf0ki24bj"]

[ext_resource type="Script" uid="uid://bem3wq4uda4uo" path="res://scripts/systems/office_gate/office_gate_controller.gd" id="1_rqpmp"]
[ext_resource type="Texture2D" uid="uid://bvguhhxihdmr1" path="res://assets/user_interface/suspect_panel/drop_down_gate.png" id="1_u4acs"]

[node name="OfficeGateController" type="Node2D"]
z_index = 5
script = ExtResource("1_rqpmp")

[node name="Gate" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Gate"]
scale = Vector2(2.5, 2.7)
texture = ExtResource("1_u4acs")

[node name="GateAudio" type="AudioStreamPlayer2D" parent="Gate"]

[node name="StartNode" type="Node2D" parent="."]

[node name="EndNode" type="Node2D" parent="."]
